fix: add the z-index back to the header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -21,6 +21,7 @@
 
 .header_expanded {
   position: relative;
+  z-index: 0;
 }
 
 .header_expanded::after {
